Add scaffolding for running solvers.

--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,5 @@
 (executable
  (public_name aoc2022)
  (name main)
- (libraries aoc2022))
+ (preprocess (pps ppx_jane))
+ (libraries core core_unix.command_unix solutions))
